--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ export VALID_HOSTS="b350-gaming-pc.bjd2385.com;perchost.bjd2385.com;routerhost.b
 export API_BACKEND_USER=flask_vm_api
 export UPTIME_CACHE_TTL=300
 export UPTIME_CACHE="/tmp/uptime.cache"
+export DEFAULT_SNAPSHOT="VMPool/images/kubernetes@no-net-completed-otherwise"
