--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ export API_BACKEND_USER=flask_vm_api
 export UPTIME_CACHE_TTL=300
 export UPTIME_CACHE="/tmp/uptime.cache"
 export DEFAULT_SNAPSHOT="VMPool/images/kubernetes@no-net-completed-otherwise"
+export REMOTE_LOOP_MOUNTPOINT="/mnt/flask_vm_api_looppoint"
+export REMOTE_LOOP_USER="flask_vm_api"
