--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ export UPTIME_CACHE="/tmp/uptime.cache"
 export DEFAULT_SNAPSHOT="VMPool/images/kubernetes@no-net-completed-otherwise"
 export REMOTE_LOOP_MOUNTPOINT="/mnt/flask_vm_api_looppoint"
 export REMOTE_LOOP_USER="flask_vm_api"
+export DEFAULT_POOL_DEFINITION_PATH="/home/brandon/projects/flask_vm_api"
