First running example of creating a domain! :D

--- a/.env
+++ b/.env
@@ -1,9 +1,25 @@
-export DEFAULT_HOST=${HOSTNAME}
+# Host this is executed on. You can substitute the first line below for the latter if you're
+# hosting this API back end on one of your hosts.
+#export DEFAULT_HOST=${HOSTNAME}
+export DEFAULT_HOST=b350-gaming-pc.bjd2385.com
+
+# List of valid virtual machine hosts in your armada; this happens to be mine.
 export VALID_HOSTS="b350-gaming-pc.bjd2385.com;perchost.bjd2385.com;routerhost.bjd2385.com"
-export API_BACKEND_USER=flask_vm_api
+
+# For files / pages read from disk - this is the individual cache items' TTL.
 export UPTIME_CACHE_TTL=300
+
+# File the cached host uptime data is stored in.
 export UPTIME_CACHE="/tmp/uptime.cache"
+
+# Default MI snapshot to clone.
 export DEFAULT_SNAPSHOT="VMPool/images/kubernetes@no-net-completed-otherwise"
+
+# Mount point that must exist on every host in order to mount loop images for injection.
 export REMOTE_LOOP_MOUNTPOINT="/mnt/flask_vm_api_looppoint"
-export REMOTE_LOOP_USER="flask_vm_api"
-export DEFAULT_POOL_DEFINITION_PATH="/home/brandon/projects/flask_vm_api"
+
+# The path at which this project resides.
+export DEFAULT_POOL_DEFINITION_PATH="/home/brandon/projects/flask_vm_api/vm_templates/default_pool.xml"
+
+# Subdirectory in this module's repo where VM pre-instantiation XML templates are stored.
+export VM_TEMPLATES_DIR="vm_templates"
